# SuBMIT

./: PDB_IO.py  README.md  pyproject.toml  submit.py  topology.py
SuBMIT/: PDB_IO.py  submit.py  topology.py
examples/Baidya2022_SOPSC-IDP-model/coarsegrain_input_PDB/GROMACS/: RUN.sh
examples/Baidya2022_SOPSC-IDP-model/coarsegrain_input_PDB/OpenSMOG/: RUN.sh
examples/Baidya2022_SOPSC-IDP-model/input_fastasequence/GROMACS/: RUN.sh
examples/Baidya2022_SOPSC-IDP-model/input_fastasequence/OpenSMOG/: RUN.sh
examples/Baratam2024_SOPSC-MULTI-model/: openSMOG_run.py  run_coulvdwtable.mdp  run_notable.mdp
examples/Baratam2024_SOPSC-MULTI-model/disordered_termini/GROMACS/: RUN.sh
examples/Baratam2024_SOPSC-MULTI-model/disordered_termini/OpenSMOG/: RUN.sh  prot_opensmog.gro  prot_opensmog.top  prot_opensmog.xml  unfolded.fa
examples/Clementi2000_CA-model/Default_LJ1012_contacts/GROMACS/: RUN.sh
examples/Clementi2000_CA-model/Default_LJ1012_contacts/OpenSMOG/: RUN.sh
examples/Clementi2000_CA-model/Gaussian_contacts/GROMACS/: RUN.sh
examples/Clementi2000_CA-model/Gaussian_contacts/OpenSMOG/: RUN.sh
examples/Equivalent_Contacts_Banerjee2023/SARS2_MproCTD_selfpep/: run_OpenSMOG.py
examples/Equivalent_Contacts_Banerjee2023/SARS2_MproCTD_selfpep/OpenSMOG/: RUN.sh
examples/Hyeon2006_SOP_Protein+RNA/Protein/GROMACS/: RUN.sh
examples/Hyeon2006_SOP_Protein+RNA/Protein/OpenSMOG/: RUN.sh
examples/Hyeon2006_SOP_Protein+RNA/RNA/GROMACS/: RUN.sh
examples/Symmetrized_Contacts_Terse2021/SARS1_MproCTD_DomainSwap/: openSMOG_run.py  run_table_dswap.mdp
(+23 files in other folders)
